Replaced the old Java implementation of the Updater with an C# implementation